--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -9,15 +9,15 @@
         max-width: 240px;
         right: 32px;
         top: 140%;
-        overflow-x: hidden;
 
         @media (max-width: 1280px) {
             display: none;
             visibility: hidden;
+            left: 25%;
         }
 
         &:last-child {
-            z-index: -1;
+            z-index: 0;
             max-width: 420px;
             width: 100%;
             transform: rotate(18deg);
@@ -27,9 +27,9 @@
             @media (max-width: 1280px) {
                 display: inline;
                 visibility: visible;
-                max-width: 340px;
-                top: 160%;
-                left: 60%;
+                max-width: 280px;
+                top: 180%;
+                left: 55%;
             }
         }
     }
@@ -44,9 +44,10 @@
         opacity: .3;
 
         @media (max-width: 1280px) {
+            z-index: 0;
             visibility: visible;
             max-width: 320px;
-            top: 150%;
+            top: 190%;
         }
     }
 
